--- a/HTML1/HTML/Index.html
+++ b/HTML1/HTML/Index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +24,7 @@
         </div>
     </header>
     
-    <body>
+
 
         <div id="ola">
         <h1>
@@ -39,7 +39,7 @@
             feiras, vendendo doces e telemarketing. Hoje estou na área que estudo o T.I
             e muito feliz com essa coquista.
         </p>
-        <img src="./img/Nina1-removebg-preview.png" alt="Milena" width="120p">
+        <img src="./img/Nina1-removebg-preview.png" alt="Milena" width="120px">
         </div>
 
         <div class="blocosobre">
@@ -101,11 +101,11 @@
 
     <footer>
         <nav id="rodape">
-            <h1>Vamos Tomar Um Café?</h1>            
+            <h2>Vamos tomar um Café?</h2>            
                     <div id="icones">
                     <a href="https://www.facebook.com/milena.muniz.988?mibextid=9R9pXO"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                     <a href="https://github.com/Milena-MM"><i class="fa fa-github" aria-hidden="true"></i></a>
-                    <a href=mailto:milenamelo1709@gmail.com?subject ="link HTML"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                    <a href=""><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
                     <a href="https://www.linkedin.com/in/milena-melo-506614163?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                     <a href="https://wa.me/qr/5LDFYDHQO6DFE1"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
                     </div>
